src/cmark-rc/scanners.c
/* Generated by re2c 3.0 */
#include "scanners.h"
#include "chunk.h"
#include <stdlib.h>

bufsize_t _scan_at(bufsize_t (*scanner)(const unsigned char *), cmark_chunk *c, bufsize_t offset)
{
    bufsize_t res;
    unsigned char *ptr = (unsigned char *)c->data;

    if (ptr == NULL || offset > c->len) {
        return 0;
    } else {
        unsigned char lim = ptr[c->len];

        ptr[c->len] = '\0';
        res = scanner(ptr + offset);
        ptr[c->len] = lim;
    }

    return res;
}

// Try to match a scheme including colon.
bufsize_t _scan_scheme(const unsigned char *p)
{
    const unsigned char *marker = NULL;
    const unsigned char *start = p;

    {
        unsigned char yych;
        yych = *p;
        if (yych <= '@')
            goto yy1;
        if (yych <= 'Z')
            goto yy3;
        if (yych <= '`')
            goto yy1;
        if (yych <= 'z')
            goto yy3;
    yy1:
        ++p;
    yy2: {
        return 0;
    }
    yy3:
        yych = *(marker = ++p);
        if (yych <= '/') {
            if (yych <= '+') {
                if (yych <= '*')
                    goto yy2;
            } else {
                if (yych <= ',')
                    goto yy2;
                if (yych >= '/')
                    goto yy2;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= '9')
                    goto yy4;
                if (yych <= '@')
                    goto yy2;
            } else {
                if (yych <= '`')
                    goto yy2;
                if (yych >= '{')
                    goto yy2;
            }
        }
    yy4:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych == '+')
                    goto yy6;
            } else {
                if (yych != '/')
                    goto yy6;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych >= 'A')
                    goto yy6;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych <= 'z')
                    goto yy6;
            }
        }
    yy5:
        p = marker;
        goto yy2;
    yy6:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych == '+')
                    goto yy8;
                goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
                goto yy8;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
                goto yy8;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych <= 'z')
                    goto yy8;
                goto yy5;
            }
        }
    yy7:
        ++p;
        {
            return (bufsize_t)(p - start);
        }
    yy8:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy5;
            } else {
                if (yych == '/')
                    goto yy5;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy7;
                if (yych <= '@')
                    goto yy5;
            } else {
                if (yych <= '`')
                    goto yy5;
                if (yych >= '{')
                    goto yy5;
            }
        }
        yych = *++p;
        if (yych == ':')
            goto yy7;
        goto yy5;
    }
}

// Try to match URI autolink after first <, returning number of chars matched.
bufsize_t _scan_autolink_uri(const unsigned char *p)
{
    const unsigned char *marker = NULL;
    const unsigned char *start = p;

    {
        unsigned char yych;
        static const unsigned char yybm[] = {
            0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,
            0,   0,   0,   0,   128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 0,   128, 0,   128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
            128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128, 128,
        };
        yych = *p;
        if (yych <= '@')
            goto yy10;
        if (yych <= 'Z')
            goto yy12;
        if (yych <= '`')
            goto yy10;
        if (yych <= 'z')
            goto yy12;
    yy10:
        ++p;
    yy11: {
        return 0;
    }
    yy12:
        yych = *(marker = ++p);
        if (yych <= '/') {
            if (yych <= '+') {
                if (yych <= '*')
                    goto yy11;
            } else {
                if (yych <= ',')
                    goto yy11;
                if (yych >= '/')
                    goto yy11;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= '9')
                    goto yy13;
                if (yych <= '@')
                    goto yy11;
            } else {
                if (yych <= '`')
                    goto yy11;
                if (yych >= '{')
                    goto yy11;
            }
        }
    yy13:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych == '+')
                    goto yy15;
            } else {
                if (yych != '/')
                    goto yy15;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych >= 'A')
                    goto yy15;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych <= 'z')
                    goto yy15;
            }
        }
    yy14:
        p = marker;
        goto yy11;
    yy15:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych == '+')
                    goto yy17;
                goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
                goto yy17;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
                goto yy17;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych <= 'z')
                    goto yy17;
                goto yy14;
            }
        }
    yy16:
        yych = *++p;
        if (yybm[0 + yych] & 128) {
            goto yy16;
        }
        if (yych <= '<')
            goto yy14;
        goto yy18;
    yy17:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych == '+')
                    goto yy19;
                goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
                goto yy19;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
                goto yy19;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych <= 'z')
                    goto yy19;
                goto yy14;
            }
        }
    yy18:
        ++p;
        {
            return (bufsize_t)(p - start);
        }
    yy19:
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
            } else {
                if (yych == '/')
                    goto yy14;
            }
        } else {
            if (yych <= 'Z') {
                if (yych <= ':')
                    goto yy16;
                if (yych <= '@')
                    goto yy14;
            } else {
                if (yych <= '`')
                    goto yy14;
                if (yych >= '{')
                    goto yy14;
            }
        }
        yych = *++p;
        if (yych <= '9') {
            if (yych <= ',') {
                if (yych != '+')
                    goto yy14;
